--- a/index.html
+++ b/index.html
@@ -17,8 +17,22 @@
         <div class="search-bar">
              <div class="form-container">
                 <form action="" id="form">
-                    <div id="city" class="form-item" >
-                        <input id ="city-input" required type="text" placeholder="City">
+                    <select id ="city-input">
+                        <option value="">please select country...</option>
+                        <option value="Atlanta">Atlanta</option>
+                        <option value="Bangkok">Bangkok</option>
+                        <option value="Berlin">Berlin</option>
+                        <option value="Budapest">Budapest</option>
+                        <option value="Cairo">Cairo</option>
+                        <option value="Jakarta">Jakarta</option>
+                        <option value="Melbourne">Melbourne</option>
+                        <option value="Mumbai">Mumbai</option>
+                        <option value="London">London</option>
+                        <option value="Peking">Peking</option>
+                        <option value="San Francisco">San Francisco</option>
+                        <option value="Tokyo">Tokyo</option>
+                        <option value="Washington">Washington</option>
+                      </select>
                     </div>
                     <div id="date" class="form-item" >
                         <input id ="date-input" required type="date" id="date-input">
