--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="search-bar">
              <div class="form-container">
                 <form action="" id="form">
+                    <div id="city" class="form-item">
                     <select id ="city-input">
                         <option value="">please select country...</option>
                         <option value="Atlanta">Atlanta</option>
